--- a/docs/styles.css
+++ b/docs/styles.css
@@ -31,6 +31,17 @@ body {
   max-width: 100%;
   height: auto
 }
+
+#ytvideo{
+  vertical-align: middle;
+  max-width: 100%;
+}
+
+
+#footer_info{
+  text-align: center;
+}
+
 .header h2{
   text-align: center;
 }
@@ -62,7 +73,6 @@ body {
 .generalBlock div h2 ul {
   text-align: center;
 }
-
 
 
 .container {
