--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -205,6 +205,7 @@
 
 		header.major h2 {
 			font-size: 2.35em;
+			color: #ffffff
 		}
 
 		header.major p {
@@ -997,7 +998,7 @@
 	}
 
 		.wrapper.style1 {
-			background: #fff0e9;
+			background: #0a0724;
 		}
 
 			.wrapper.style1 .box {
